updated tables package and fixed page overflow

--- a/src/_css/theme/el-c-pullout.pcss
+++ b/src/_css/theme/el-c-pullout.pcss
@@ -3,6 +3,7 @@
     margin: var(--spacing-16) 0 var(--spacing-16) 0;  
     border: 1px solid var(--color-grey-dark);
     border-radius: var(--ui-border-radius);
+    overflow: hidden;
 }
 
 .el-c-pullout__figure {
@@ -53,6 +54,7 @@
 } 
 
 .el-c-pullout-content {
+    
     background-color: var(--color-white);
     padding: var(--spacing-32) var(--spacing-16) var(--spacing-32) var(--spacing-16);
     border-radius: 0 0 var(--ui-border-radius) var(--ui-border-radius);
