--- a/src/_css/theme/layout.pcss
+++ b/src/_css/theme/layout.pcss
@@ -15,7 +15,7 @@
   display: flex;
   flex-flow: column nowrap;
   justify-content: left;
-  /* align-items: center; */
+  overflow: hidden;
   background: var(--color-white);
   flex: 1;
 }           
@@ -32,6 +32,7 @@
 .coop-l-page {
   width: 100%;
   padding: var(--spacing-16);
+  overflow: hidden;
 }
 
 @media (--mq-medium) {
